--- a/project_code.ipynb
+++ b/project_code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,8 +14,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Cleaning"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 3,
    "metadata": {
     "scrolled": false
    },
@@ -212,7 +219,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -516,22 +523,22 @@
        "yellow-white            8\n",
        "White                   7\n",
        "Blue white              3\n",
-       "white                   3\n",
        "Yellowish White         3\n",
-       "Whitish                 2\n",
-       "yellowish               2\n",
+       "white                   3\n",
        "Orange                  2\n",
-       "Pale yellow orange      1\n",
-       "Blue                    1\n",
-       "Blue white              1\n",
-       "Blue-White              1\n",
-       "White-Yellow            1\n",
+       "yellowish               2\n",
+       "Whitish                 2\n",
        "Yellowish               1\n",
+       "Blue-White              1\n",
        "Orange-Red              1\n",
+       "White-Yellow            1\n",
+       "Blue white              1\n",
+       "Blue                    1\n",
+       "Pale yellow orange      1\n",
        "Name: Star color, dtype: int64"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -542,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 6,
    "metadata": {
     "scrolled": false
    },
@@ -559,13 +566,13 @@
        "yellowish             3\n",
        "orange                2\n",
        "whitish               2\n",
-       "orangered             1\n",
        "whiteyellow           1\n",
+       "orangered             1\n",
        "paleyelloworange      1\n",
        "Name: Star color, dtype: int64"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -579,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -595,7 +602,7 @@
        "Name: Star color, dtype: int64"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -611,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -959,11 +966,286 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## PCA"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(19,)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# zero-mean\n",
+    "# Z = np.zeros((4,240))\n",
+    "# Z[0] = final_starData.iloc[:, 0] - np.mean(final_starData.iloc[:, 0])\n",
+    "# Z[1] = final_starData.iloc[:, 0] - np.mean(final_starData.iloc[:, 1])\n",
+    "# Z[2] = final_starData.iloc[:, 0] - np.mean(final_starData.iloc[:, 2])\n",
+    "# Z[3] = final_starData.iloc[:, 0] - np.mean(final_starData.iloc[:, 3])\n",
+    "\n",
+    "\n",
+    "Z = np.zeros((19,240))\n",
+    "meandata=[]\n",
+    "for i in range(19):\n",
+    "    Z[i]=final_starData.iloc[:, i] - np.mean(final_starData.iloc[:, i])\n",
+    "    meandata.append(np.mean(final_starData.iloc[:, i]))\n",
+    "\n",
+    "meandata= np.array(meandata)\n",
+    "meandata.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The eigenvectors are  [[ 2.09892192e-02  9.99737571e-01 -9.17419102e-03  2.69426233e-04\n",
+      "   4.05856093e-05  2.35553615e-07  2.00995191e-05 -2.43139114e-05\n",
+      "  -3.00203254e-05  1.01323486e-05 -9.58760883e-06  2.84023586e-06\n",
+      "   1.41365566e-06  4.45824706e-07  2.75853340e-06  8.01923555e-08\n",
+      "   1.13465038e-07 -2.20493477e-19  1.37142237e-19]\n",
+      " [ 9.99778551e-01 -2.09743950e-02  1.70987678e-03  2.34279563e-05\n",
+      "  -7.70438746e-07  1.45438397e-06  8.82519334e-08 -5.31696811e-07\n",
+      "  -4.61130053e-08 -1.69319292e-07  8.87813153e-08  2.80128342e-07\n",
+      "  -1.87249295e-07  4.99073965e-08 -1.20776895e-07  6.39702334e-09\n",
+      "  -1.32501497e-08 -6.01887194e-22  6.58267493e-21]\n",
+      " [ 1.51672530e-03 -9.20988053e-03 -9.99924377e-01  7.97629165e-03\n",
+      "   9.93804465e-05 -2.01422396e-04  1.85942272e-04  2.71827525e-04\n",
+      "   5.59688965e-04 -1.36293832e-04  3.23074283e-05 -3.38342768e-06\n",
+      "  -3.22532411e-05 -4.61152252e-05 -3.87170173e-05 -8.55089197e-07\n",
+      "  -4.90780906e-06  9.19913137e-19 -7.81097313e-19]\n",
+      " [-4.06568779e-05 -1.91786138e-04  7.84682075e-03  9.90043051e-01\n",
+      "  -9.99963856e-02 -3.44787903e-02 -2.88504395e-02 -1.62690278e-03\n",
+      "  -6.29542454e-02  5.87583460e-02  3.05597001e-03 -1.44481971e-02\n",
+      "  -6.30250562e-04  2.47304552e-03  9.29269234e-03 -1.77314811e-03\n",
+      "   4.54772009e-04 -9.02469476e-17  1.88077200e-16]\n",
+      " [ 6.45575834e-06  3.05391903e-05 -1.55944508e-03 -1.38409784e-01\n",
+      "  -6.15223089e-01 -2.23220517e-01 -2.55189960e-01 -8.10714640e-02\n",
+      "  -5.59583969e-01  3.91922583e-01  2.14580234e-02 -9.44649390e-02\n",
+      "   1.45829407e-02  1.92114689e-02  6.27750890e-02 -1.26679992e-02\n",
+      "   3.79718400e-03 -8.79192547e-16  1.21088128e-15]\n",
+      " [-1.41494518e-07  5.65496282e-07  3.93778591e-06 -4.83056877e-03\n",
+      "  -1.57857189e-01  9.07760589e-02  5.08654982e-01  3.93687495e-01\n",
+      "  -2.41472739e-01 -2.25530957e-02  1.99100320e-01  4.91866449e-01\n",
+      "  -4.88815708e-03 -3.14954320e-02  1.95319067e-02 -4.22230283e-02\n",
+      "  -2.58203795e-01  3.05588692e-01 -2.42116040e-01]\n",
+      " [-1.72163713e-07  2.41734280e-05 -1.00693292e-04  3.37561676e-03\n",
+      "  -1.72502698e-01  4.23772139e-01 -6.21708202e-01 -1.69905157e-02\n",
+      "   7.49269659e-02 -3.48308339e-01  1.66107479e-01  2.89880590e-02\n",
+      "  -4.70418307e-02 -7.65974812e-02  1.48721311e-01 -2.94535720e-02\n",
+      "  -2.73040798e-01  3.05588692e-01 -2.42116040e-01]\n",
+      " [-2.36741212e-07  2.49317518e-07  2.72259977e-05 -1.21051675e-03\n",
+      "  -1.78583588e-01 -1.83505461e-01  1.84615723e-01 -5.52470174e-01\n",
+      "   1.92109694e-01 -6.25515392e-02  1.57414884e-01 -9.87041726e-02\n",
+      "   1.08339792e-01  1.45137831e-01 -5.50993715e-01 -1.16965217e-01\n",
+      "  -1.63861392e-01  3.05588692e-01 -2.42116040e-01]\n",
+      " [ 1.58101273e-08 -3.37160432e-07 -2.21279449e-05 -2.81021754e-04\n",
+      "  -9.47979989e-04 -2.46219263e-03  1.97682728e-03  1.35258616e-03\n",
+      "   9.73124039e-03 -9.11005427e-03 -8.07027017e-03  3.51880339e-03\n",
+      "  -7.61289101e-02  4.94255264e-01  1.19019864e-01  6.61926608e-01\n",
+      "   3.93037451e-01  3.05588692e-01 -2.42116040e-01]\n",
+      " [ 3.48207812e-08 -2.25927040e-06 -1.43303545e-05 -1.65186228e-03\n",
+      "  -5.37803576e-02 -1.98995305e-02 -2.40334849e-02  2.65840791e-02\n",
+      "   3.88995550e-02 -1.13478242e-02 -7.18411032e-01  1.07259474e-01\n",
+      "  -1.45681045e-01  8.67015019e-02  5.58956924e-02 -4.72551207e-01\n",
+      "   2.61031503e-01  3.05588692e-01 -2.42116040e-01]\n",
+      " [-6.61924351e-07 -3.78219126e-05 -1.20637388e-04  1.41579044e-02\n",
+      "   4.67939444e-01  6.28771255e-02 -8.23358225e-02 -1.62277944e-01\n",
+      "  -3.67903419e-01  1.81989761e-01  1.16137281e-01 -1.46028376e-02\n",
+      "   2.13243373e-01 -5.14587256e-01 -8.57578324e-02  3.13738282e-02\n",
+      "   3.16421249e-01  3.05588692e-01 -2.42116040e-01]\n",
+      " [ 1.16169289e-06  1.54301016e-05  2.26625196e-04 -9.55955159e-03\n",
+      "   9.57323685e-02 -3.71558140e-01  3.28299772e-02  3.10114473e-01\n",
+      "   2.93708704e-01  2.71881092e-01  8.77213376e-02 -5.18325776e-01\n",
+      "  -4.78432227e-02 -1.03414427e-01  2.93582773e-01 -3.21074120e-02\n",
+      "  -2.75384218e-01  3.05588692e-01 -2.42116040e-01]\n",
+      " [ 1.04019883e-06  2.55987668e-05  2.02742997e-04 -3.28425382e-03\n",
+      "   3.78803777e-02 -4.44405034e-01 -3.85386977e-01  3.82369023e-01\n",
+      "   1.43628505e-01 -6.24209221e-02  2.43525125e-01  2.93804454e-01\n",
+      "   3.25207144e-02  5.81419793e-02 -3.27706897e-01 -1.33400823e-01\n",
+      "   2.52379360e-01  2.22424581e-01  2.90236053e-01]\n",
+      " [-2.03162867e-07  1.54958517e-05 -6.48797013e-05 -8.20411418e-03\n",
+      "  -1.89931020e-01  6.03108782e-01  1.20078502e-01  1.67347676e-01\n",
+      "   2.16609278e-01  4.24099591e-01  1.34214867e-01 -2.31495575e-01\n",
+      "   1.91476676e-03  3.67029328e-02 -1.94704541e-01 -1.30903887e-01\n",
+      "   2.45065557e-01  2.22424581e-01  2.90236053e-01]\n",
+      " [ 9.75068832e-08 -2.02866969e-06 -1.19231594e-05  1.06707001e-03\n",
+      "  -4.02327083e-02 -5.33396356e-03 -1.57395945e-04 -1.58316518e-02\n",
+      "   5.05393848e-02 -2.03715078e-02 -2.93990130e-01  5.69210167e-02\n",
+      "   8.21820265e-01  5.65565655e-02  1.62930353e-01  1.35475511e-01\n",
+      "  -1.97781182e-01  2.22424581e-01  2.90236053e-01]\n",
+      " [-6.80919016e-07 -3.78395303e-05 -1.50529815e-04  1.28903188e-02\n",
+      "   4.72156277e-01  5.54499328e-02 -7.90630797e-02 -1.54533943e-01\n",
+      "  -3.49079704e-01  1.60342658e-01  5.28153946e-02 -5.77536300e-03\n",
+      "  -2.04977484e-01  5.00046269e-01  6.73158542e-02 -1.98845237e-01\n",
+      "  -3.38107376e-01  2.22424581e-01  2.90236053e-01]\n",
+      " [-4.46726374e-08 -2.06168810e-07 -4.03807451e-06  2.17854851e-03\n",
+      "  -1.26002559e-01 -5.88467591e-02  2.52319133e-01  5.87079859e-02\n",
+      "  -3.10738781e-01 -6.25227733e-01  7.81079638e-02 -4.58578386e-01\n",
+      "  -6.21703468e-02 -6.75214377e-02  8.22558142e-02 -9.57905977e-02\n",
+      "   2.06052178e-01  2.22424581e-01  2.90236053e-01]\n",
+      " [-4.18109518e-08 -6.05292316e-07  7.23616750e-06 -1.31812688e-03\n",
+      "  -3.14696437e-02 -2.00897843e-02 -2.15856040e-02  1.75840816e-02\n",
+      "  -1.56905863e-02  3.41696450e-02 -4.02696361e-01  2.26846742e-02\n",
+      "  -3.81667425e-01 -3.67408658e-01 -3.15680309e-01  4.65086748e-01\n",
+      "  -3.07018639e-01  2.22424581e-01  2.90236053e-01]\n",
+      " [-1.67140241e-07 -4.14957384e-07  2.13915850e-05 -3.32944245e-03\n",
+      "  -1.22400724e-01 -1.29883174e-01  1.13795421e-01 -4.55643171e-01\n",
+      "   2.64731903e-01  8.94082692e-02  1.88023140e-01  3.22439179e-01\n",
+      "  -2.07440491e-01 -2.16517651e-01  5.25589725e-01 -4.16217148e-02\n",
+      "   1.39410103e-01  2.22424581e-01  2.90236053e-01]]\n",
+      "The eigenvalues are  [ 3.20759519e+10  7.67779225e+07  1.86062092e+05  4.40377511e+01\n",
+      "  4.28057733e-01  2.29593566e-01  1.16567066e-01  1.04718931e-01\n",
+      "  7.24130850e-02  4.82789133e-02  3.98160651e-02  2.62853978e-02\n",
+      "  1.61918142e-02  8.23534780e-03  6.42575337e-03  3.89472577e-03\n",
+      "  7.68026992e-04  2.14642312e-16 -1.75080360e-16]\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 240\n",
+    "Z_T = np.transpose(Z)\n",
+    "covmatrix = np.matmul(Z, Z_T)*(1/n)\n",
+    "eigvals, V = np.linalg.eig(covmatrix)\n",
+    "print(\"The eigenvectors are \", V)\n",
+    "print(\"The eigenvalues are \", eigvals)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def eigsort(V, eigvals):\n",
+    "    \n",
+    "    # Sort the eigenvalues from largest to smallest. Store the sorted\n",
+    "    # eigenvalues in the column vector lambd.\n",
+    "    lohival = np.sort(eigvals)\n",
+    "    lohiindex = np.argsort(eigvals)\n",
+    "    lambd = np.flip(lohival)\n",
+    "    index = np.flip(lohiindex)\n",
+    "    Dsort = np.diag(lambd)\n",
+    "    \n",
+    "    # Sort eigenvectors to correspond to the ordered eigenvalues. Store sorted\n",
+    "    # eigenvectors as columns of the matrix vsort.\n",
+    "    M = np.size(lambd)\n",
+    "    Vsort = np.zeros((M, M))\n",
+    "    for i in range(M):\n",
+    "        Vsort[:,i] = V[:,index[i]]\n",
+    "    return Vsort, Dsort"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sort the eigenvectors based on eigenvalues\n",
+    "Vnew, Dnew = eigsort(V, eigvals)\n",
+    "\n",
+    "# Find principal compenent coordinates\n",
+    "c = np.matmul(Vnew.T,Z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 3.06911723e+03,  3.04311947e+03,  2.60115678e+03, ...,\n",
+       "         8.82501008e+03,  9.23175111e+03,  3.78684549e+04],\n",
+       "       [-2.06243156e-01, -2.08595433e-01, -2.15892339e-01, ...,\n",
+       "         5.37493743e+05,  4.04940606e+05,  2.94905524e+05],\n",
+       "       [ 1.22062097e+02,  1.22300659e+02,  1.26356286e+02, ...,\n",
+       "         9.88202328e+02,  7.57842475e+02,  3.06931731e+02],\n",
+       "       ...,\n",
+       "       [ 5.58616696e-02,  5.58670530e-02,  5.59585701e-02, ...,\n",
+       "         3.29897953e-02,  3.82521489e-02,  3.67606742e-02],\n",
+       "       [ 2.01208618e-02,  2.01366181e-02,  2.04044749e-02, ...,\n",
+       "         9.93170875e-04,  4.60351093e-03, -9.55044644e-03],\n",
+       "       [ 7.00859294e-02,  7.00968070e-02,  7.02817206e-02, ...,\n",
+       "        -1.74579039e-02,  3.36749537e-03,  8.81506058e-03]])"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Reconstructed data with top 2 principal component\n",
+    "z_2 = np.matmul(Vnew[:,0:2], c[0:2])\n",
+    "z_hat = z_2 + np.reshape(meandata, (19,1))\n",
+    "z_hat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 3.06799847e+03,  3.04199835e+03,  2.59999783e+03, ...,\n",
+       "         8.82899902e+03,  9.23500062e+03,  3.78819968e+04],\n",
+       "       [ 2.26961581e-03,  3.58642515e-04,  1.12697438e-04, ...,\n",
+       "         5.37493000e+05,  4.04940000e+05,  2.94903000e+05],\n",
+       "       [ 1.25237627e-01,  1.05728687e-01,  3.80006419e-02, ...,\n",
+       "         1.42296970e+03,  1.11201740e+03,  1.78290649e+03],\n",
+       "       ...,\n",
+       "       [ 5.53692422e-02,  5.53735835e-02,  5.54484489e-02, ...,\n",
+       "         3.47455511e-02,  3.96824418e-02,  4.27212210e-02],\n",
+       "       [ 2.10032840e-02,  2.10209079e-02,  2.13186043e-02, ...,\n",
+       "        -2.15311659e-03,  2.04044800e-03, -2.02316548e-02],\n",
+       "       [ 7.26945494e-02,  7.27109479e-02,  7.29840733e-02, ...,\n",
+       "        -2.67589704e-02, -4.20944070e-03, -2.27607668e-02]])"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Reconstructed data with top 3 principal component\n",
+    "z_3 = np.matmul(Vnew[:,0:3], c[0:3])\n",
+    "z_hat = z_3 + np.reshape(meandata, (19,1))\n",
+    "z_hat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Reconstructed data with top 4 principal component\n",
+    "z_4 = np.matmul(Vnew[:,0:4], c[0:4])\n",
+    "z_hat = z_4 + np.reshape(meandata, (19,1))"
+   ]
   }
  ],
  "metadata": {
@@ -982,7 +1264,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
